fix: wrap changes  in forVersion mixin (#14200)

--- a/projects/storefrontstyles/scss/components/cart/_cart-item.scss
+++ b/projects/storefrontstyles/scss/components/cart/_cart-item.scss
@@ -138,8 +138,11 @@
       justify-content: flex-start;
     }
 
-    .cx-value {
-      word-break: break-word;
+    @include forVersion(4.2) {
+      .cx-value {
+        text-align: end;
+        word-break: break-word;
+      }
     }
   }
 
